# bibata_cursor

./: .gitignore  build.toml  cursor_utils.py  pyproject.toml  readme.adoc
.github/workflows/: build.yaml
config/: build.right.toml  render.json
src/: cursor_utils.py
svg/: link.py  symlink.toml
