[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "bibata"
version = "0.2.0"
description = "bibata cursors"
authors = ["giskard <rtgiskard@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"

# optional dev tools
ruff = {version = "^0.0.272", optional = true}
yapf = {version = "^0.40.0", optional = true}
pytest = {version = "^7.2.2", optional = true}

[tool.yapf]
based_on_style = "pep8"
column_limit = 94
spaces_before_comment = "20,25"
#spaces_before_comment = 4

[tool.ruff]
indent-width = 4
line-length = 94
lint.select = [	## ref: https://beta.ruff.rs/docs/rules/
	"E",	# pycodestyle Error
	"W",	# pycodestyle Warning
	"I",	# isort
	"F",	# Pyflakes
	"A",	# flake8-builtins
	"B",	# flake8-bugbear
	"Q",	# flake8-quotes
	"C4",	# flake8-comprehensions
	"COM",	# flake8-commas
	"SIM",	# flake8-simplify
]
lint.ignore = [	## ref: https://pep8.readthedocs.io/en/release-1.7.x/intro.html#error-codes
	"E266", # too many leading ‘#’ for block comment
	"E731", # do not assign a lambda expression, use a def
	"I001", # Import block is un-sorted or un-formatted
	"COM812", # Trailing comma missing
]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"
multiline-quotes = "single"
docstring-quotes = "single"
